[package]
name = "panamax"
version = "1.0.14"
authors = ["k3d3 <k@3d3.ca>"]
description = "Mirror rustup and crates.io repositories, for offline Rust and Cargo usage."
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/panamax-rs/panamax"
repository = "https://github.com/panamax-rs/panamax"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
console = "0.15"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
url = "2.5"
glob = "0.3"
git2 = "0.19"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
askama = "0.12"
askama_warp = "0.13"
include_dir = "0.7"
bytes = "1.7"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3"
futures = "0.3"
walkdir = "2.3"
toml_edit = {version = "0.22", features = ["serde"] }

[features]
default = []
dev_reduced_crates = []
vendored-openssl = ["reqwest/native-tls-vendored"]
